MGDAPI-2909 update to prepare release and base csv files

--- a/config/manifests-rhoam/bases/managed-api-service.clusterserviceversion.yaml
+++ b/config/manifests-rhoam/bases/managed-api-service.clusterserviceversion.yaml
@@ -132,3 +132,4 @@ spec:
       alm-owner-rhoam: rhoam-operator
       operated-by: rhoam-operator
   version: 1.15.2
+  replaces: managed-api-service.v1.15.1
