--- a/packagemanifests/integreatly-operator/2.9.4/integreatly-operator.clusterserviceversion.yaml
+++ b/packagemanifests/integreatly-operator/2.9.4/integreatly-operator.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: RHMI integration
     certified: "false"
-    containerImage: quay.io/integreatly/integreatly-operator:v2.9.4-rc3
+    containerImage: quay.io/integreatly/integreatly-operator:v2.9.4
     olm.skipRange: '>=2.4.0 <2.6.1'
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
@@ -416,7 +416,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "20"
-                    image: quay.io/integreatly/integreatly-operator:v2.9.4-rc3
+                    image: quay.io/integreatly/integreatly-operator:v2.9.4
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
