use new RHSSO 7.5 images

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -230,6 +230,15 @@ rules:
 - apiGroups:
   - operators.coreos.com
   resources:
+  - clusterserviceversions
+  verbs:
+  - delete
+  - get
+  - list
+  - update
+- apiGroups:
+  - operators.coreos.com
+  resources:
   - installplans
   verbs:
   - update
@@ -242,19 +251,18 @@ rules:
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
+  - clusterrolebindings
   - clusterroles
+  - rolebindings
+  - roles
   verbs:
   - '*'
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
-  - rolebindings
+  - clusterroles
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - update
+  - '*'
 - apiGroups:
   - route.openshift.io
   resources:
@@ -447,17 +455,5 @@ rules:
   - get
   - list
   - patch
-  - update
-  - watch
-- apiGroups:
-  - rbac.authorization.k8s.io
-  resources:
-  - rolebindings
-  - roles
-  verbs:
-  - create
-  - delete
-  - get
-  - list
   - update
   - watch
