use new RHSSO 7.5 images

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -230,19 +230,27 @@ rules:
 - apiGroups:
   - operators.coreos.com
   resources:
+  - clusterserviceversions
+  verbs:
+  - delete
+  - get
+  - list
+  - update
+- apiGroups:
+  - operators.coreos.com
+  resources:
   - installplans
   verbs:
   - update
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
+  - clusterrolebindings
+  - clusterroles
   - rolebindings
+  - roles
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - update
+  - '*'
 - apiGroups:
   - route.openshift.io
   resources:
@@ -435,17 +443,5 @@ rules:
   - get
   - list
   - patch
-  - update
-  - watch
-- apiGroups:
-  - rbac.authorization.k8s.io
-  resources:
-  - rolebindings
-  - roles
-  verbs:
-  - create
-  - delete
-  - get
-  - list
   - update
   - watch
