--- a/packagemanifests/managed-api-service/1.15.2/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.15.2/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.15.2-rc1
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.15.2
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
@@ -503,7 +503,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:rhoam-v1.15.2-rc1
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.15.2
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
@@ -697,9 +697,9 @@ spec:
   maturity: alpha
   provider:
     name: rhoam
-  replaces: managed-api-service.v1.15.1
   selector:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
       operated-by: rhoam-operator
   version: 1.15.2
+  replaces: managed-api-service.v1.15.1
