--- a/Dockerfile.functional
+++ b/Dockerfile.functional
@@ -21,7 +21,10 @@ COPY version ./version
 RUN make test/compile/functional
 
 # Use chromedp as base image to allow for headless chrome instance in tests
-FROM chromedp/headless-shell:latest
+FROM registry.access.redhat.com/ubi8/ubi:latest
+#Install chrome for Unit Tests
+COPY *.repo /etc/yum.repos.d/
+RUN dnf -y install google-chrome-stable && dnf clean all
 
 COPY --from=builder /go/src/github.com/integr8ly/integreatly-operator/integreatly-operator-test-harness.test integreatly-operator-test-harness.test
 
