MGDAPI-2370 fix entrypoint name

--- a/config/scorecard/patches/kuttl.config.yaml
+++ b/config/scorecard/patches/kuttl.config.yaml
@@ -2,7 +2,7 @@
   path: /stages/0/tests/-
   value:
     entrypoint:
-    - rhoam-scorecard-tests
+    - entrypoint
     - happy-path
     image: quay.io/operator-framework/scorecard-test-kuttl:v2.0.0
     labels:
