--- a/config/redhat-sandbox/kustomization.yaml
+++ b/config/redhat-sandbox/kustomization.yaml
@@ -7,6 +7,7 @@ namespace: sandbox-rhoam-operator
 
 bases:
 - ../crd
+- ../crd-sandbox
 - ../rbac-sandbox
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
