--- a/bundles/managed-api-service/1.16.0/tests/scorecard/config.yaml
+++ b/bundles/managed-api-service/1.16.0/tests/scorecard/config.yaml
@@ -67,13 +67,25 @@ stages:
         mountPath: {}
   - entrypoint:
     - entrypoint
-    - happy-path
-    image: quay.io/operator-framework/scorecard-test-kuttl:v2.0.0
+    - 01-happy-path
+    image: quay.io/psturc/scorecard-test-kuttl:latest
     labels:
       cluster-product: ocp
       cluster-size: small
       phase: msp-main
       test: happy-path
+    storage:
+      spec:
+        mountPath: {}
+  - entrypoint:
+    - entrypoint
+    - 02-scalability
+    image: quay.io/psturc/scorecard-test-kuttl:latest
+    labels:
+      cluster-product: ocp
+      cluster-size: small
+      phase: msp-main
+      test: scalability
     storage:
       spec:
         mountPath: {}
