MGDAPI-2370 increase cluster size for scalab. test

--- a/config/scorecard/patches/kuttl.config.yaml
+++ b/config/scorecard/patches/kuttl.config.yaml
@@ -19,6 +19,6 @@
     image: quay.io/psturc/scorecard-test-kuttl:latest
     labels:
       cluster-product: ocp
-      cluster-size: small
+      cluster-size: medium
       phase: msp-main
       test: scalability
