CVP-2642 def mountpath for archiving test results

--- a/config/scorecard/bases/config.yaml
+++ b/config/scorecard/bases/config.yaml
@@ -6,3 +6,7 @@ stages:
 - parallel: true
   tests: []
 serviceaccount: rhoam-test-runner
+storage:
+  spec:
+    mountPath:
+      path: logs/artifacts
