--- a/bundles/managed-api-service/1.16.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.16.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.16.0-rc1
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-cpaas-1.16.0-rc2
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.9"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
@@ -504,7 +504,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:rhoam-v1.16.0-rc1
+                    image: quay.io/integreatly/managed-api-service:rhoam-cpaas-1.16.0-rc2
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
