--- a/bundles/managed-api-service/1.17.0/tests/scorecard/config.yaml
+++ b/bundles/managed-api-service/1.17.0/tests/scorecard/config.yaml
@@ -76,7 +76,8 @@ stages:
       test: happy-path
     storage:
       spec:
-        mountPath: {}
+        mountPath:
+          path: logs/artifacts
   - entrypoint:
     - entrypoint
     - 02-scalability
@@ -88,7 +89,8 @@ stages:
       test: scalability
     storage:
       spec:
-        mountPath: {}
+        mountPath:
+          path: logs/artifacts
 storage:
   spec:
     mountPath: {}
