MGDAPI-3483 Changed all info level alerts to blackhole

--- a/templates/monitoring/alertmanager/alertmanager-application-monitoring.yaml
+++ b/templates/monitoring/alertmanager/alertmanager-application-monitoring.yaml
@@ -18,7 +18,7 @@ route:
         severity: critical
       receiver: critical
     - match:
-        alertname: ThreeScaleContainerHighMemory
+        severity: info
       receiver: blackhole
     - match:
         alertname: DeadMansSwitch
