--- a/bundles/managed-api-service/1.18.0/manifests/integreatly.org_rhoamtenants.yaml
+++ b/bundles/managed-api-service/1.18.0/manifests/integreatly.org_rhoamtenants.yaml
@@ -1,5 +1,3 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -14,7 +12,7 @@ spec:
     listKind: RhoamTenantList
     plural: rhoamtenants
     singular: rhoamtenant
-  scope: Cluster
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
