--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -124,6 +124,22 @@ rules:
 - apiGroups:
   - integreatly.org
   resources:
+  - apimanagementtenant
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - integreatly.org
+  resources:
+  - apimanagementtenant/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - integreatly.org
+  resources:
   - rhmiconfigs
   verbs:
   - create
@@ -157,22 +173,6 @@ rules:
   - integreatly.org
   resources:
   - rhmis/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - integreatly.org
-  resources:
-  - rhoamtenant
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - integreatly.org
-  resources:
-  - rhoamtenant/status
   verbs:
   - get
   - patch
