--- a/config/rbac/apimanagementtenant_viewer_role.yaml
+++ b/config/rbac/apimanagementtenant_viewer_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to view rhoamtenants.
+# permissions for end users to view apimanagementtenants.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: rhoamtenant-viewer-role
+  name: apimanagementtenant-viewer-role
 rules:
 - apiGroups:
   - integreatly.org
   resources:
-  - rhoamtenants
+  - apimanagementtenants
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - integreatly.org
   resources:
-  - rhoamtenants/status
+  - apimanagementtenants/status
   verbs:
   - get
