Support for multi tenant rhoam

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -51,6 +51,16 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - '*'
+  resources:
+  - configmaps
+  - secrets
+  - subscriptions
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - admissionregistration.k8s.io
   resources:
   - mutatingwebhookconfigurations
