--- a/config/scorecard/patches/kuttl.config.yaml
+++ b/config/scorecard/patches/kuttl.config.yaml
@@ -4,7 +4,7 @@
     entrypoint:
     - entrypoint
     - 01-happy-path
-    image: quay.io/psturc/scorecard-test-kuttl:latest
+    image: quay.io/integreatly/scorecard-test-kuttl:master
     labels:
       cluster-product: ocp
       cluster-size: small
@@ -20,7 +20,7 @@
     entrypoint:
     - entrypoint
     - 02-scalability
-    image: quay.io/psturc/scorecard-test-kuttl:latest
+    image: quay.io/integreatly/scorecard-test-kuttl:master
     labels:
       cluster-product: ocp
       cluster-size: medium
