--- a/bundles/managed-api-service/1.19.0/tests/scorecard/config.yaml
+++ b/bundles/managed-api-service/1.19.0/tests/scorecard/config.yaml
@@ -68,7 +68,7 @@ stages:
   - entrypoint:
     - entrypoint
     - 01-happy-path
-    image: quay.io/psturc/scorecard-test-kuttl:latest
+    image: quay.io/integreatly/scorecard-test-kuttl:master
     labels:
       cluster-product: ocp
       cluster-size: small
@@ -81,7 +81,7 @@ stages:
   - entrypoint:
     - entrypoint
     - 02-scalability
-    image: quay.io/psturc/scorecard-test-kuttl:latest
+    image: quay.io/integreatly/scorecard-test-kuttl:master
     labels:
       cluster-product: ocp
       cluster-size: medium
