--- a/Dockerfile.functional
+++ b/Dockerfile.functional
@@ -22,8 +22,10 @@ RUN make test/compile/functional
 
 FROM registry.access.redhat.com/ubi8/ubi:latest
 # Install chrome for tests
-COPY test-dependancy/*.repo /etc/yum.repos.d/
-RUN dnf -y install google-chrome-stable && dnf clean all
+RUN dnf -y install wget
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+RUN dnf -y install google-chrome-stable_current_x86_64.rpm
+RUN dnf clean all
 
 COPY --from=builder /go/src/github.com/integr8ly/integreatly-operator/integreatly-operator-test-harness.test integreatly-operator-test-harness.test
 
