--- a/config/secrets/addon-params-secret.yaml
+++ b/config/secrets/addon-params-secret.yaml
@@ -16,6 +16,8 @@ objects:
       custom-smtp-port: ${PORT}
       custom-smtp-from_address: ${FROM}
       sts-role-arn: ${StsRoleARN}
+      s3-access-key-id: ${S3_ACCESS_KEY_ID}
+      s3-secret-access-key: ${S3_SECRET_ACCESS_KEY}
 parameters:
   - name: QUOTA
     # QUOTA value is per 100,000
@@ -34,3 +36,7 @@ parameters:
     value: "test@example.com"
   - name: StsRoleARN
     value: "arn:aws:iam::485026278258:role/12345"
+  - name: S3_ACCESS_KEY_ID
+    value: "123"
+  - name: S3_SECRET_ACCESS_KEY
+    value: "secret"
