MGDAPI-3828 Added Get Node permissions for grafana-serviceaccount and added check to restart the grafana-operator-controller-manager deployment

--- a/manifests/integreatly-grafana/4.2.0/grafana-operator.clusterserviceversion.yaml
+++ b/manifests/integreatly-grafana/4.2.0/grafana-operator.clusterserviceversion.yaml
@@ -92,6 +92,7 @@ spec:
           - ""
           resources:
           - pods
+          - nodes
           verbs:
           - get
           - list
@@ -356,4 +357,5 @@ spec:
   maturity: alpha
   provider:
     name: Red Hat
+  replaces: grafana-operator.v3.10.4
   version: 4.2.0
