MGDAPI-3412 update olm skip range

--- a/bundles/managed-api-service/1.20.1/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.20.1/manifests/managed-api-service.clusterserviceversion.yaml
@@ -53,6 +53,7 @@ metadata:
     certified: "false"
     containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.20.1-rc1
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
+    olm.skipRange: '>=0.0.1 <1.20.1'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
