MGDAPI-3764: Custom SMTP support
Add the feature that allows the customer to have custom smtp credentials inside 3scale

--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -105,6 +105,15 @@ spec:
           status:
             description: RHMIStatus defines the observed state of RHMI
             properties:
+              customSmtp:
+                properties:
+                  active:
+                    type: boolean
+                  error:
+                    type: string
+                required:
+                - active
+                type: object
               gitHubOAuthEnabled:
                 type: boolean
               lastError:
