--- a/manifests/integreatly-3scale/0.8.3+0.1649688682.p/3scale-operator.clusterserviceversion.yaml
+++ b/manifests/integreatly-3scale/0.8.3+0.1649688682.p/3scale-operator.clusterserviceversion.yaml
@@ -182,7 +182,7 @@ metadata:
     tectonic-visibility: ocs
     description: 3scale Operator to provision 3scale and publish/manage API
     olm.substitutesFor: 3scale-operator.v0.8.3
-  name: 3scale-operator.v0.8.3-0.1649688682.p
+  name: 3scale-operator.v0.8.3+0.1649688682.p
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
