MGDAPI-3764: PR comments
Address comments made during the RP review.

--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -107,12 +107,12 @@ spec:
             properties:
               customSmtp:
                 properties:
-                  active:
+                  enabled:
                     type: boolean
                   error:
                     type: string
                 required:
-                - active
+                - enabled
                 type: object
               gitHubOAuthEnabled:
                 type: boolean
