MGDAPI-3764: RBAC permissions
Add delete to the RBAC permissions for secrets in the integreatly-operator namespace.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -384,6 +384,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - secrets
+  verbs:
+  - delete
+- apiGroups:
+  - ""
+  resources:
   - services
   - services/finalizers
   verbs:
