MGDAPI-3209 prepare for release rhoam-v1.21.0-rc1

--- a/bundles/managed-api-service/1.21.0/manifests/integreatly.org_rhmis.yaml
+++ b/bundles/managed-api-service/1.21.0/manifests/integreatly.org_rhmis.yaml
@@ -89,6 +89,15 @@ spec:
             status:
               description: RHMIStatus defines the observed state of RHMI
               properties:
+                customSmtp:
+                  properties:
+                    enabled:
+                      type: boolean
+                    error:
+                      type: string
+                  required:
+                    - enabled
+                  type: object
                 gitHubOAuthEnabled:
                   type: boolean
                 lastError:
