Workaround for new externalComponents value

--- a/packagemanifests/integreatly-operator/2.9.0/integreatly-operator.clusterserviceversion.yaml
+++ b/packagemanifests/integreatly-operator/2.9.0/integreatly-operator.clusterserviceversion.yaml
@@ -82,6 +82,14 @@ spec:
       clusterPermissions:
       - rules:
         - apiGroups:
+            - config.openshift.io
+          resources:
+            - clusterversions
+          verbs:
+            - get
+            - list
+            - watch
+        - apiGroups:
           - ""
           resources:
           - configmaps
