--- a/manifests/integreatly-3scale/0.8.3/3scale-operator.v0.8.3.clusterserviceversion.yaml
+++ b/manifests/integreatly-3scale/0.8.3/3scale-operator.v0.8.3.clusterserviceversion.yaml
@@ -310,6 +310,14 @@ spec:
       clusterPermissions:
       - rules:
         - apiGroups:
+              - config.openshift.io
+            resources:
+              - clusterversions
+            verbs:
+              - get
+              - list
+              - watch
+        - apiGroups:
           - console.openshift.io
           resources:
           - consolelinks
