--- a/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:master
+    containerImage: quay.io/bgallagher/managed-api-service:v1.22.0
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.14.0+git
@@ -531,7 +531,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:master
+                    image: quay.io/bgallagher/managed-api-service:v1.22.0
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
