--- a/products/products.yaml
+++ b/products/products.yaml
@@ -7,7 +7,7 @@
 # quayScan - decide whether the image should be scanned or not 
 products:
   - name: 3scale-operator
-    version: 3scale-2.11.0-GA
+    version: 3scale-2.12.0
     url: "https://github.com/3scale/3scale-operator"
     installType: "rhmi/rhoam"
     manifestsDir: "integreatly-3scale"
