MGDAPI-3412-bump-to-config-file

--- a/config/scorecard/kuttl/00-installation/02-cluster-storage.yaml
+++ b/config/scorecard/kuttl/00-installation/02-cluster-storage.yaml
@@ -2,6 +2,8 @@ apiVersion: integreatly.org/v1alpha1
 kind: RHMI
 metadata:
   name: rhoam
+  annotations:
+    in_prow: 'true'
 spec:
   useClusterStorage: 'true'
   selfSignedCerts: true
