MGDAPI-3973 test: improve coverage

--- a/Dockerfile.functional
+++ b/Dockerfile.functional
@@ -22,7 +22,7 @@ RUN make test/compile/functional
 
 FROM registry.access.redhat.com/ubi8/ubi:latest
 # Install chrome for tests
-COPY test-dependancy/*.repo /etc/yum.repos.d/
+COPY test-dependency/*.repo /etc/yum.repos.d/
 RUN dnf -y install google-chrome-stable && dnf clean all
 
 COPY --from=builder /go/src/github.com/integr8ly/integreatly-operator/integreatly-operator-test-harness.test integreatly-operator-test-harness.test
