MGDAPI-3412 add 3scale rbac

--- a/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.22.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -316,6 +316,17 @@ spec:
                 - patch
                 - update
             - apiGroups:
+                - apps.3scale.net
+              resources:
+                - '*'
+              verbs:
+                - create
+                - delete
+                - get
+                - list
+                - update
+                - watch
+            - apiGroups:
                 - integreatly.org
               resources:
                 - rhmis
