--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,6 +7,17 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - "apps.3scale.net"
+  resources:
+  - *
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
