MGDAPI-3926 - feat: ensure rate limits are correct in redis

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -29,6 +29,12 @@ rules:
   - list
 - apiGroups:
   - ""
+  resources:
+  - pods
+  verbs:
+  - create
+- apiGroups:
+  - ""
   resourceNames:
   - grafana-datasources
   resources:
