MGDAPI-4016 Added support to create MT RHOAM manifests and bundles

--- a/envs/multitenant-managed-api.env
+++ b/envs/multitenant-managed-api.env
@@ -1,8 +1,8 @@
-PROJECT=managed-api-service
-TAG ?= $(RHOAM_TAG)
+PROJECT=multitenant-managed-api-service
+TAG ?= $(MULTITENANT_RHOAM_TAG)
 OPERATOR_IMAGE=$(REG)/$(ORG)/$(PROJECT):v$(TAG)
 NAMESPACE_PREFIX ?= sandbox-rhoam-
-APPLICATION_REPO ?= managed-api-service
+APPLICATION_REPO ?= multitenant-managed-api-service
 export INSTALLATION_PREFIX ?= sandbox-rhoam
 export OLM_TYPE ?= multitenant-managed-api-service
 INSTALLATION_NAME ?= rhoam
