MGDAPI-2981 - bump: operator-sdk 1.21.0

--- a/bundles/managed-api-service/1.23.0/tests/scorecard/config.yaml
+++ b/bundles/managed-api-service/1.23.0/tests/scorecard/config.yaml
@@ -2,6 +2,7 @@ apiVersion: scorecard.operatorframework.io/v1alpha3
 kind: Configuration
 metadata:
   name: config
+serviceaccount: rhoam-test-runner
 stages:
 - parallel: true
   tests:
