--- a/bundles/managed-api-service/1.23.0/manifests/integreatly.org_rhmiconfigs.yaml
+++ b/bundles/managed-api-service/1.23.0/manifests/integreatly.org_rhmiconfigs.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: rhmiconfigs.integreatly.org
 spec:
@@ -63,7 +63,7 @@ spec:
               description: RHMIConfigStatus defines the observed state of RHMIConfig
               properties:
                 maintenance:
-                  description: "status block reflects the current configuration of the cr \n \tstatus: \t\tmaintenance: \t\t\tapply-from: 16-05-2020 23:00 \t\t\tduration: \"6hrs\" \t\tupgrade: \t\t\twindow: \"3 Jan 1980 - 17 Jan 1980\""
+                  description: "status block reflects the current configuration of the cr \n status: maintenance: apply-from: 16-05-2020 23:00 duration: \"6hrs\" upgrade: window: \"3 Jan 1980 - 17 Jan 1980\""
                   properties:
                     applyFrom:
                       type: string
