--- a/bundles/managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -54,7 +54,7 @@ metadata:
     containerImage: quay.io/integreatly/managed-api-service:rhoam-cpaas-1.23.0
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
-    operators.operatorframework.io/builder: operator-sdk-v1.12.0
+    operators.operatorframework.io/builder: operator-sdk-v1.21.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
     serviceAffecting: "false"
@@ -507,6 +507,8 @@ spec:
             strategy: {}
             template:
               metadata:
+                annotations:
+                  kubectl.kubernetes.io/default-container: manager
                 labels:
                   name: rhmi-operator
               spec:
