--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -10,6 +10,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/default-container: manager
       labels:
         name: rhmi-operator
     spec:
